# alma

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.md  auth.py  deploy.sh  docker-compose.yml  main.py  package.json  pyproject.toml  pytest.ini  vite.config.js
.github/workflows/: test.yml
alma/: auth.py  caching.py  indexes.py  main.py  notes.py  projects.py  regenerate.py  wiki_links.py
alma/static/css/: responsive.css
alma/static/js/: editor.js  keyboard.js  ui.js
alma/templates/: base.html  editor.html  index.html  login.html
alma/templates/partials/: load-more.html  note-form.html  note-item.html  note-list-only.html  project-create-modal.html  project-edit-modal.html  project-filter.html  projects-list.html  search-bar.html  tag-cloud.html  tags-cloud.html
plans/: architecture-static-vs-ssr.md  design_implementation_plan.md  design_vision.md  editor.md  implementaion.md  mobile-dictation-service.md  phase1-authentication.md  phase2-core-crud.md  phase3-organization.md  phase4-intelligence.md  phase5-polish.md  project-management.md  uv-setup-guide.md
templates/: base.html  index.html
templates/partials/: note-edit.html  note-item.html
tests/: __init__.py  conftest.py  test_auth.py  test_indexes.py  test_notes.py  test_projects.py
