[project]
name = "alma"
version = "0.1.0"
description = "A minimal, file-first note-taking app with Google OAuth, HTMX, and markdown storage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.121.1",
    "itsdangerous>=2.2.0",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.4",
]

[project.scripts]
alma = "alma.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alma"]

[tool.uv]
package = true
